# UnstableSituation

./: README.md  docker-compose.yaml
DataIngestor/: Dockerfile  Makefile  README.md  config.local.yaml  config.yaml  docker-compose.yml  go.mod  go.sum
DataIngestor/cmd/data-ingestor/: main.go  main_test.go
GraphQLGateway/: GraphQLGateway.sln
GraphQLGateway/GraphQLGateway/: Dockerfile  GraphQLGateway.csproj  Program.cs  WeatherForecast.cs  appsettings.json
GraphQLGateway/GraphQLGateway/Controllers/: DebugController.cs  WeatherForecastController.cs
GraphQLGateway/GraphQLGateway/Data/: SensorDbContext.cs
GraphQLGateway/GraphQLGateway/Hubs/: NotificationsHub.cs
GraphQLGateway/GraphQLGateway/Models/: SensorData.cs
GraphQLGateway/GraphQLGateway/Properties/: launchSettings.json
GraphQLGateway/GraphQLGateway/Queries/: SensorQueries.cs
GraphQLGateway/GraphQLGateway/Types/: SensorTypes.cs
data-ingestor-service/: .gitkeep
data-processor-service/: .gitignore  .gitkeep  CHANGES.md  Cargo.toml  Dockerfile  README.md  config.yaml
data-processor-service/migrations/: 001_create_meter_data_tables.sql
data-processor-service/src/: config.rs  database.rs  lib.rs  main.rs  models.rs  processor.rs  rabbitmq.rs
frontend/: .gitkeep
graphql-api-gateway/: .gitkeep
monitoring/: .gitkeep  prometheus.yml
notification-service/: .gitkeep
unstable-situation/: Dockerfile  README.md  package-lock.json  package.json
unstable-situation/src/: App.css  App.js
unstable-situation/src/components/: Dashboard.css  Dashboard.js  Notifications.css  Notifications.js
(+2 files in other folders)
