[package]
name = "data_processor_service"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Data Processor Service for microservices architecture"
license = "MIT"
rust-version = "1.90"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# RabbitMQ client
lapin = "2.3"

# PostgreSQL client
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde", "clock"] }

# UUID support
uuid = { version = "1.6", features = ["v4", "serde", "std"] }

# Futures utilities
futures-lite = "2.0"


[dev-dependencies]
tokio-test = "0.4"
